                       User-Visible wallet Changes

wallet 0.3 (unreleased)

    The keytab backend now supports limiting generated keytabs to
    particular enctypes by setting an attribute on the object.

wallet 0.2 (2007-10-08)

    First public alpha release.  Only tested with SQLite 3, no history
    support, no object list support, and only keytab object and krb5 ACL
    support.

wallet 0.1 (2007-03-08)

    Internal release containing only kasetkey, a stub client, and design
    documentation.